# Goto-Engine

./: CMakeLists.txt  Makefile  PLAN-full.md  README.md
data/: messier.json
include/gte/: catalog.hpp  coord_transform.hpp  mount.hpp  time_utils.hpp  tracking_loop.hpp
src/: catalog.cpp  coord_transform.cpp  goto_engine_cli.cpp  mount.cpp  time_utils.cpp  tracking_loop.cpp
tests/: engine_tests.cpp  sidereal_time_tests.cpp
